# disney-time-tracking

./: .flake8  .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml
data/: tracking.yml
docker/: Dockerfile  docker-compose.yml
rust_code/: .justfile  Cargo.toml  data.json  data_2.json  datetime_array.json  new_data.json  test_data.json  try_data.json  updated_data.json
rust_code/src/: main.rs  serial.rs  try_convert.rs  try_me.rs  utils.rs
src/: tracking.py
